# reflex-os

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.standalone.txt  CMakeLists.txt  CONTRIBUTING.md  DO_THIS_NEXT.md  Doxyfile  IMPLEMENTATION-STATUS.md  LICENSE  Makefile  Makefile.host  NEXT_ACTIONS.md  OS-BACKLOG.md  OS-PRD.md  POTENTIALS.md  README.md  REMEDIATION.md  SECURITY.md  STRATEGY.md  TASM-SPEC.md  VM-LOADER-V2.md  VM-STATE.md  VM-SYSCALLS.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  standalone.cmake  supervisor.tasm  tasm.py  test.tasm
.githooks/: pre-commit
.github/workflows/: build.yml
bonsai/: ATLAS.md  BRIDGE.md  CASE-STUDY-GPIO.md  EXPERIMENT-001.md  EXPERIMENT-002.md  EXPERIMENT-003A.md  EXPERIMENT-004.md  EXPERIMENT-005.md  GLOSSARY.md  GOOSE.md  IMPLEMENTATION-STATUS-BONSAI.md  LIBRARY.md  MMIO-MAP.md  MORPHOLOGY.md  NOTATION.md  ONTOLOGY-OF-C6.md  README.md  ROADMAP.md  SUPERVISOR.md  TAPESTRY.md
bonsai/journal/: dma_fragments_synth.md  geometric_spinlocks_nodes.md  geometric_spinlocks_raw.md  geometric_spinlocks_reflect.md  geometric_spinlocks_synth.md  goose_nodes.md  goose_raw.md  goose_reflect.md  goose_synth.md  inter-system_tapestry_nodes.md  inter-system_tapestry_raw.md  inter-system_tapestry_redteam.md  inter-system_tapestry_reflect.md  inter-system_tapestry_synth.md  lmm_emergence_p10.md  lmm_reflex_2.0.md  paging_locks_redteam.md  performance_telemetry_synth.md  phase7_plan.md  redteam_atlas_100.md  redteam_bridge.md  redteam_library.md  redteam_phase10.md  redteam_phase12.md  redteam_phase4.md  redteam_phase6.md  redteam_phase7.md  redteam_phase9.md  redteam_phase9_global.md  silicon_agency_synth.md  spatial_paging_nodes.md  spatial_paging_raw.md  spatial_paging_redteam.md  spatial_paging_reflect.md  spatial_paging_synth.md  ternary_lattice_hashing_synth.md  ternary_number_system_raw.md
bonsai/tools/: extract_mmio_map.py
bootloader_components/main/: CMakeLists.txt  reflex_boot0.c
components/goose/: CMakeLists.txt  goose_atlas.c  goose_atmosphere.c  goose_dma.c  goose_etm.c  goose_gateway.c  goose_library.c  goose_metabolic.c  goose_mmio_sync.c  goose_runtime.c  goose_shadow_atlas.c  goose_supervisor.c  goose_telemetry.c
components/goose/include/: goose.h  goose_metabolic.h  goose_telemetry.h
components/goose/ulp/: lp_pulse.c
core/: CMakeLists.txt  README.md  boot.c  event_bus.c  fabric.c  log.c  service_manager.c
core/include/: reflex_boot.h  reflex_event.h  reflex_fabric.h  reflex_log.h  reflex_service.h
docs/: DEBUGGING.md  GETTING_STARTED.md  ONBOARDING.md  PLATFORM_BACKEND.md  README.md  REMEDIATION-PLAN.md  USER_MANUAL.md  architecture.md  assessment-802154-extraction.md  assessment-deep-sleep.md  assessment-freertos-startup.md  audit-2026-04-16.md  boot.md  design-metabolic-regulation.md  design-mmio-sync.md  design-role-based-access.md  design-self-expanding-perception.md  essay-substrate-as-interface.md  holons.md  implementation-status.md  learning.md  lmm-curiosity-attractor.md  lmm-metabolic-regulation.md  lmm-role-based-access.md  lmm-self-expanding-perception.md  paper-novel-contributions.md  potentials.md  prd-autonomous-reward.md  prd-developer-experience.md  prd-full-independence.md  prd-mesh-discovery.md  prd-mmio-sync.md  prd-pypi-publish.md  prd-service-watchdog.md  prd-tasm-compiler.md  prd-tasm-upload.md  prd.md  remediation-plan-v2.md  remediation-plan.md  sleep.md  (+8 more)
docs/vm/: README.md  cache.md  loader.md  state.md  syscalls.md
drivers/: CMakeLists.txt  README.md  button.c  led.c
drivers/include/: reflex_button.h  reflex_led.h
examples/: README.md  button_blink.loom  button_blink.ls  self_heal.loom  self_heal.ls
examples/blink/: blink.py
examples/custom-cell/: custom_cell.py
examples/mesh-temp/: mesh_temp.py
examples/multi-node/: multi_node.py
examples/purpose-demo/: purpose_demo.py
examples/tasm/: README.md  blink.tasm  count.tasm  (+1 more)
include/: reflex_crypto.h  reflex_hal.h  reflex_kv.h  reflex_radio.h  reflex_task.h  reflex_tuning.h  reflex_types.h
journal/: phase23_nodes.md  phase23_raw.md  phase23_reflect.md  phase23_synth.md  phase24_nodes.md  phase24_raw.md  phase24_reflect.md  phase24_synth.md  phase25_nodes.md  phase25_raw.md  phase25_reflect.md  phase25_synth.md  phase26_nodes.md  phase26_raw.md  phase26_reflect.md  phase26_synth.md  phase27_nodes.md  phase27_raw.md  phase27_reflect.md  phase27_synth.md  phase28_nodes.md  phase28_raw.md  phase28_reflect.md  phase28_synth.md  substrate_gaps_nodes.md  substrate_gaps_raw.md  substrate_gaps_reflect.md  substrate_gaps_synth.md  ternary_number_system_nodes.md  ternary_number_system_reflect.md  ternary_number_system_synth.md
kernel/: reflex_app_startup.c  reflex_freertos_compat.c  reflex_freertos_shim.c  reflex_kernel.h  reflex_kernel_test.c  reflex_portasm.S  reflex_sched.c  reflex_sched.h  reflex_startup.c  reflex_task_kernel.c  reflex_trap.c  reflex_vectors.S
main/: CMakeLists.txt  main.c
net/: CMakeLists.txt  README.md  wifi.c
net/include/: reflex_wifi.h
platform/esp32/: CMakeLists.txt  reflex_hal_esp32.c  reflex_kv_esp32.c
platform/esp32c6/: CMakeLists.txt  Kconfig.projbuild  reflex_crypto_esp32c6.c  reflex_hal_esp32c6.c  reflex_kv_esp32c6.c  reflex_kv_flash.c  reflex_radio_802154.c  reflex_radio_esp32c6.c  reflex_task_esp32c6.c
release/: flash.sh
sdk/python/: README.md  pyproject.toml  reflex.py  setup.py
services/: CMakeLists.txt  README.md  button_service.c  led_service.c  temp_service.c
shell/: CMakeLists.txt  README.md  shell.c
storage/: CMakeLists.txt  README.md  config.c  storage.c
tests/: vm_stubs.c  vm_test_main.c
tools/: goose_scraper.py  goose_zones.json  loom_viewer.py  loomc.py  tasm.py  test_goonies_mmio.py
vm/: CMakeLists.txt  README.md  cache.c  interpreter.c  loader.c  mmu.c  syscall.c  task_runtime.c  ternary.c
vm/include/: reflex_cache.h  reflex_ternary.h  reflex_vm.h  reflex_vm_loader.h  reflex_vm_mem.h  reflex_vm_opcode.h  reflex_vm_state.h  reflex_vm_task.h
vm/programs/: blink.c  count.c  programs.c  programs.h  respond.c
(+16 files in other folders)
