[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-os"
version = "0.1.0"
description = "Python SDK for Reflex OS embedded mesh nodes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tripp Josserand-Austin", email = "tripp@anjaustin.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
reflex-cli = "reflex:main"

[project.urls]
Homepage = "https://github.com/EntroMorphic/reflex-os"
Repository = "https://github.com/EntroMorphic/reflex-os"

[tool.setuptools]
py-modules = ["reflex"]
